--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
-  <title>Ajax Sandbox</title>
+  <title>Chuck Norris Joke Generator</title>
 </head>
 <body>
   <div class="container">
-    <buttonn id="button">Get Customer</button>
-      <button id="button2">Get Customers</button>
-    <br><br>
-    <h1>Customer</h1>
-    <div id="customer"></div>
-    <h1>Customers</h1>
-    <div id="customers"></div>
+    <form>
+      <div>
+        <label for="number">Number of Jokes</label>
+        <input type="number" id="number">
+      </div>
+      <div>
+        <button class="get-jokes">Get Jokes</button>
+      </div>
+    </form>
   </div>
   
   <script src="app.js"></script>
