--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="container">
+    <h2>Chuck Norris Joke Generator</h2>
     <form>
       <div>
         <label for="number">Number of Jokes</label>
@@ -18,6 +19,7 @@
         <button class="get-jokes">Get Jokes</button>
       </div>
     </form>
+    <ul class="jokes"></ul>
   </div>
   
   <script src="app.js"></script>
