--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Javascript Sandbox</title>
+  <title>EasyHttp3 Eample</title>
 </head>
 <body>
   
+  <script src="easyhttp3.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
