--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>EasyHttp3 Eample</title>
+  <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
+  <title>Github Finder</title>
 </head>
 <body>
   
-  <script src="easyhttp3.js"></script>
-  <script src="app.js"></script>
 </body>
 </html>
