--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="container searchContainer">
   <div class="search card card-body">
     <h1>Search GitHub Users</h1>
-    <p class="lead" Enter a username to fetch a user profile and repos from GitHub></p>
+    <p class="lead">Enter a username to fetch a user profile and repos from GitHub</p>
     <input type="text" id="searchUser" class="form-control" placeholder="Github Username...">
   </div>
   <br>
